Another commit to try cleaning directory.

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 This is the first todo app to be created.
 There is no items at the moment.
 Maybe there will be in the future.
+And this is a fourth line to try git diff.
